--- a/templates/index.html
+++ b/templates/index.html
@@ -1,44 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
+{% block title %} Home {% endblock %}
+{% block head %}
+{{ super() }}
+{% endblock %}
+{% block hero %}
+<div class="jumbo-container">
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Website</h1>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>{{title}}</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
-    <div class="jumbo-container">
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1 class="display-4">Website</h1>
-
-            </div>
         </div>
     </div>
+</div>
+{% endblock %}
+{% block content %}
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/index">Website</a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/insperation">Insperation</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Filler</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+<div class="container">
     <div class="row">
 
         <div class="col-1">
-
         </div>
-
         <div class="col-10">
             <table class="table table-">
                 <thead class="thead-dark">
@@ -55,13 +36,10 @@
                     </tr>
                 </thead>
             </table>
-
         </div>
         <div class="col-1">
 
         </div>
     </div>
-
-</body>
-
-</html>
+</div>
+{% endblock %}
