Added base html for testing API routes using Ajax

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,6 +30,8 @@
     {% block content%}
   
     {% endblock %}
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
     <div id="footer">
         <h2>I am working!</h2>
     </div>
