Created succsesful search country function

--- a/templates/showCountries.html
+++ b/templates/showCountries.html
@@ -8,11 +8,11 @@
 
 <button id="btn">Show All Countries</button>
 <div id="CountryFeild"></div>
-<script src="static/js/main.js"></script>
+
 <div id=search-div>
     <h6>Search</h6>
 
-    <input id="search_input" type="text">
+    <input value="" id="search_input" type="text">
     <button id="search_button">Search</button>
 </div>
 <div>
@@ -27,5 +27,5 @@
     <button id="edit_button">Search</button>
 
 </div>
-
+<script src="static/js/main.js"></script>
 {% endblock %}
