--- a/templates/showCountries.html
+++ b/templates/showCountries.html
@@ -11,20 +11,18 @@
 
 <div id=search-div>
     <h6>Search</h6>
-
     <input value="" id="search_input" type="text">
     <button id="search_button">Search</button>
 </div>
 <div>
     <h6>Add</h6>
-    <input id="add_input" type="text">
-    <button id="add_button">Search</button>
+    <input id="add_input" type="text" value="">
+    <button id="add_button">Add</button>
 </div>
 <div>
-    <h6>Edit</h6>
-    <input id="edit_search" type="text">
-    <input id="edit_input" type="text">
-    <button id="edit_button">Search</button>
+    <h6>Delete</h6>
+    <input id="delete_input" type="text">
+    <button id="delete_button">Delete</button>
 
 </div>
 <script src="static/js/main.js"></script>
