Added GET countries Ajax function to index

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,25 +21,13 @@
         <div class="col-1">
         </div>
         <div class="col-10">
-            <table class="table table-">
-                <thead class="thead-dark">
-                    <tr>
-                        <th>Place</th>
-                        <th>Holder</th>
-                        <th>Table</th>
-                    </tr>
-
-                    <tr>
-                        <td>I</td>
-                        <td>Need</td>
-                        <td>content</td>
-                    </tr>
-                </thead>
-            </table>
+            <button id="loadCountries">Load Countries</button>
         </div>
         <div class="col-1">
 
         </div>
     </div>
 </div>
+<script src="static/js/main.js"></script>
+
 {% endblock %}
