Fixed data loading bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,13 +21,12 @@
         <div class="col-1">
         </div>
         <div class="col-10">
+            <svg width="600" height="600" class='svgBody'></svg>
             <button id="loadCountries">Load Countries</button>
         </div>
         <div class="col-1">
-
         </div>
     </div>
 </div>
 <script src="static/js/main.js"></script>
-
 {% endblock %}
