--- a/templates/insperation.html
+++ b/templates/insperation.html
@@ -32,18 +32,28 @@
                 <div class="card">
                     <img src="Images/holdf.png" alt="Filler" class="card-img-top">
                     <div class="card-body">
-                        <h5 class="card-title"></h5>
+                        <h5 class="card-title">Thrive</h5>
                         <p class="card-text">
-                            Non existant insperation.
+                   
+                            
+                            
                         </p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="Images/holdf.png" alt="Filler" class="card-img-top">
                     <div class="card-body">
-                        <h5 class="card-title"></h5>
+                        <h5 class="card-title">Status</h5>
                         <p class="card-text">
-                            Non existant insperation.
+                    
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="Images/holdf.png" alt="Filler" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">3</h5>
+                        <p class="card-text">                           
                         </p>
                     </div>
                 </div>
