--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,33 +9,25 @@
         <script src="https://d3js.org/d3.v5.js"></script>
 
         <title>{% block title %}{%endblock%}</title>
-        <link rel="stylesheet" href="static/css/style.css">
+        <link rel="stylesheet" href="static/sass/compiledSheet.css">
 	{% endblock %}
     </head>
 <body>
+    {% extends "navigation.html"%}
+    
 	{% block hero %}
 
-	{% endblock %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/index">Website</a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/insperation">Insperation</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Filler</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    {% endblock %}
+    <!--Navigation-->
+
+
     {% block content%}
   
     {% endblock %}
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-
     <div id="footer">
         <h2>I am working!</h2>
     </div>
+
 </body>
 </html>
