--- a/static/sass/compiledSheet.css
+++ b/static/sass/compiledSheet.css
@@ -8,4 +8,16 @@ body {
 .border-color {
   border-color: #f5f5f5; }
 
+.jumbotron {
+  background-image: url("https://images.unsplash.com/photo-1494256997604-768d1f608cac?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1401&q=80");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  border: none;
+  margin: 0px; }
+
+.jumbo-container {
+  width: 100%; }
+
 /*# sourceMappingURL=compiledSheet.css.map */
