--- a/static/sass/style.sass
+++ b/static/sass/style.sass
@@ -9,3 +9,18 @@ body
 
 .border-color
     border-color: $primary-color
+
+
+.jumbotron
+    color:white
+    background-image: url("https://images.unsplash.com/photo-1494256997604-768d1f608cac?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1401&q=80")
+    background-position: center
+    background-repeat: no-repeat
+    background-size: cover
+    height: 100vh
+    border: none
+    margin: 0px
+
+.jumbo-container
+    width: 100%
+
