Added new footer component. Added spacing to insperation page

--- a/static/sass/compiledSheet.css
+++ b/static/sass/compiledSheet.css
@@ -20,4 +20,7 @@ body {
 .jumbo-container {
   width: 100%; }
 
+.footer-text {
+  color: #FFFFF0; }
+
 /*# sourceMappingURL=compiledSheet.css.map */
