--- a/static/sass/style.sass
+++ b/static/sass/style.sass
@@ -1,6 +1,6 @@
 $primary-color: #f5f5f5
 $font: Avenir
-
+$footer-text-color: #FFFFF0
 body
     background-color: $primary-color
     font-family: $font
@@ -24,3 +24,5 @@ body
 .jumbo-container
     width: 100%
 
+.footer-text
+    color: $footer-text-color
