--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         <div class="col-1">
         </div>
         <div class="col-10">
-            <svg width="1000" height="1000" class='svgBody'></svg>
+            <img src="/static//Images/filler.png" alt="">
             <button id="loadCountries">Load Countries</button>
         </div>
         <div class="col-1">
