--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,10 +13,7 @@
 	{% endblock %}
     </head>
 <body>
-    {% block navigation %}
-
     {% include "navigation.html" %}
-    {% endblock %}
 
 	{% block hero %}
 
@@ -28,9 +25,8 @@
   
     {% endblock %}
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <div id="footer">
-        <h2>I am working!</h2>
-    </div>
+
+    {% include "footer.html" %}
 
 </body>
 </html>
