--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,18 @@
 </div>
 {% endblock %}
 {% block content %}
+<div class="bg-dark pt-3"></div>
 
 <div class="container">
+    <div class="pt-3"></div>
+
+    <div class="row pt-5 ">
+        <div class="d-flex justify-content-center">
+            <h2>Welcome Home!</h2>
+        </div>
+    </div>
+    <div class="pt-5"></div>
+
     <div class="row">
 
         <div class="col-1">
@@ -27,6 +37,8 @@
         <div class="col-1">
         </div>
     </div>
+    <div class="pt-5"></div>
+
 </div>
 <script src="static/js/main.js"></script>
 {% endblock %}
