Moved code comment documentation to documentation page

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -10,7 +10,7 @@
                     <a class="nav-link" href="/insperation">Insperation</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Documentation</a>
+                    <a class="nav-link" href="/documentation">Documentation</a>
                 </li>
             </ul>
         </div>
