--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<div class="footer bg-dark p-5">
+<div class="footer bg-dark pt-5">
     <div class="container">
         <div class="row">
             <div class="col-4">
