--- a/templates/insperation.html
+++ b/templates/insperation.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %} Home {% endblock %}
+{% block title %} Insperation {% endblock %}
 {% block head %}
 {{ super() }}
 {% endblock %}
