--- a/static/sass/compiledSheet.css
+++ b/static/sass/compiledSheet.css
@@ -9,6 +9,7 @@ body {
   border-color: #f5f5f5; }
 
 .jumbotron {
+  color:white;
   background-image: url("https://images.unsplash.com/photo-1494256997604-768d1f608cac?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1401&q=80");
   background-position: center;
   background-repeat: no-repeat;
