--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,18 +1,17 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
+    <a class="navbar-brand" href="/home">Chromar</a>
+
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="collapse_target">
-        <a class="navbar-brand" href="/home">Chromar</a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/insperation">Insperation</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/documentation">Documentation</a>
-                </li>
-            </ul>
-        </div>
+    <div class="collapse navbar-collapse" id="navbarMenu">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/insperation">Insperation</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/documentation">Documentation</a>
+            </li>
+        </ul>
     </div>
 </nav>
