--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -7,10 +7,10 @@
     <div class="collapse navbar-collapse" id="navbarMenu">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="url_for(/insperation)">Insperation</a>
+                <a class="nav-link" href="/insperation">Insperation</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="url_for(/documentation)">Documentation</a>
+                <a class="nav-link" href="/documentation">Documentation</a>
             </li>
         </ul>
     </div>
